<resources>
    <string name="app_name">Blocky</string>
    <string name="title_activity_main">Blocky</string>

    <string name="enter_key">Enter your public key:</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Reset</string>

    <string name="CUSTOM_TILE_ID">QR code</string>
    <string name="title_activity_key_submit">Submit Public Key</string>
    <string name="title_activity_password">Payment Amount</string>

    <string name="guid_input">Please input GUID</string>
    <string name="input_passwords">Please input Blockchain passwords.</string>
    <string name="input_amount">Please input amount to send.</string>
    <string name="amount">Amount (Satoshi)</string>
    <string name="pw1">Password 1</string>
    <string name="pw2">Password 2 (optional)</string>
    <string name="send">Send</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Welcome</string>
    <string name="powered_by">Powered By</string>
    <string name="desc">Logo</string>
    <string name="sponser1">blockchaininfo</string>
    <string name="powered_by_sy">   |   </string>
    <string name="main_logo">tem_logo</string>
</resources>
