<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bitcoin.hacktheplanet.cfb.bitcointiler.PasswordActivity">

    <TextView
        android:textSize="30dp"
        android:id="@+id/amount"
        android:text="@string/input_amount"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/amount"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/amount"
        android:id="@+id/input_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_below="@+id/input_amount"
        android:textSize="30dp"
        android:id="@+id/instructions"
        android:layout_centerHorizontal="true"
        android:text="@string/input_passwords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/pw1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/instructions"
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:hint="@string/pw2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password1"
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/send"
        style="?android:textAppearanceSmall"
        android:onClick="submitHttp" />

</RelativeLayout>
