<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bitcoin.hacktheplanet.cfb.bitcointiler.SettingsActivity">

    <TextView
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/guid_input"
        android:text="@string/guid_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/sparkle"
        android:layout_below="@+id/guid_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sparkle"
        android:id="@+id/password_request"
        android:text="@string/input_passwords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/pw1"
        android:layout_below="@+id/password_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pw1"
        />

    <EditText
        android:hint="@string/pw2"
        android:layout_below="@+id/pw1"
        android:id="@+id/pw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="passBack"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pw2"/>


</RelativeLayout>
